<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.task222.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/task221_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_calendar"
        android:orderInCategory="100"
        android:title="@string/task213_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_cities"
        android:orderInCategory="100"
        android:title="@string/task212_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_pay"
        android:orderInCategory="100"
        android:title="@string/task211_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_subs"
        android:orderInCategory="100"
        android:title="@string/subs_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_photo"
        android:orderInCategory="100"
        android:title="@string/photo_name"
        app:showAsAction="never" />
</menu>